# NatLangChain

./: .dockerignore  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTIC_SECURITY_AUDIT.md  AGENTIC_SECURITY_AUDIT_V3.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_REPORT.md  Anti-Harassment.md  Automation.md  BOUNDARY_SECURITY_AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRACTS.md  CONTRIBUTING.md  DEPENDENCY_MAP.md  Dockerfile  EVALUATION.md  EVALUATION_REPORT.md  FAQ.md  FUTURE.md  Founding-Contributor-Pledge.md  Future.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  Multilingual-Extensions.md  NCIP-016-DRAFT.md  NatLangChain.md  README.md  REFOCUS_PLAN.md  ROADMAP.md  SECURITY.md  SECURITY_REPORT.md  SECURITY_REVIEW.md  SECURITY_SWEEP_REPORT.md  (+37 more)
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
Docs/: Cosmos.md  General-Overview.md  Important-Notice.md  Invisible-Labor.md  LF1M.md  Lawful-use-non-Surveillance.md  Legal-Advantage-of-Temporal-Fixity.md  Physical-Anchors-For-Linguistic-Value.md  Post-on-the-Chain.md  Professional-Safety-net.md  TOS.md  Value-of-Generative-AI.md  user-manual.md
_deferred/frontend/: eslint.config.js  index.html  vite.config.js
_deferred/sdk/: README.md  package-lock.json  package.json  tsconfig.json
_deferred/src/: adaptive_cache.py  anti_harassment.py  chain_interface.py  did_identity.py  dispute.py  drift_thresholds.py  emergency_overrides.py  mediator_reputation.py  multi_model_consensus.py  negotiation_engine.py  p2p_network.py  protocol_amendments.py  semantic_diff.py  term_registry.py  validator_trust.py
_deferred/tests/: test_backup.py  test_block_compression.py  test_chain_interface.py  test_cognitive_load.py  test_drift_thresholds.py  test_gossip_protocol.py  test_llm_providers.py  test_monitoring.py  test_nat_traversal.py  test_rbac.py  test_scaling.py  test_semantic_locking.py  test_term_registry.py  test_validator_mediator_coupling.py
argocd/: README.md  image-updater.yaml  notifications-cm.yaml
argocd/apps/: applicationset.yaml  natlangchain-monitoring.yaml  natlangchain-production.yaml  natlangchain-staging.yaml  root.yaml
argocd/projects/: natlangchain.yaml
benchmarks/: tps_comparison_solana.py  tps_simulation_results.json
charts/natlangchain/: .helmignore  Chart.yaml  README.md  values.yaml
data/: chain.json
deploy/: docker-compose.production.yaml
deploy/nginx/: natlangchain.conf
deploy/prometheus/: prometheus.yml
docs/: Architectural-Premise.md  DESIGN-PHILOSOPHY.md  Data-Storage.md  Escalation-Protocol.md  FIDO-Yubi.md  Intent-Driven-Mobility.md  NCIP-000+.md  NCIP-000.md  Observance-Burn.md  Positive-Pressure.md  README.md  Refusal-Doctrine.md  Search-Controls.md  Threat-Model.md  Treasury.md  WORKFLOW.md  archive.md  future.md  invisible-labor.md  language-as-os.md  lni-testable-theory.md  physical-anchors-linguistic-value.md  real-time-proof-of-effort.md  roadmap.md  system-architecture.md  terms-of-service.md  unique-strengths.md  value-of-path-not-taken.md
docs/runbooks/: chain-invalid.md  disaster-recovery.md
examples/: quickstart.py
frontend/: .eslintrc.cjs  .gitignore  README.md  WINDOWS-BUILD.md  build-windows.bat  build-windows.ps1  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
k8s/: README.md  ingress.yaml  namespace.yaml  pdb.yaml  secret.yaml  serviceaccount.yaml
k8s/monitoring/: grafana-dashboards.yaml  servicemonitor.yaml
migrations/: 001_initial_schema.sql  002_add_semantic_search.sql  README.md  V0001__initial_schema.sql  V0002__contracts_disputes.sql  V0003__rbac_api_keys.sql  migrate.py
sdk/: eslint.config.js  package-lock.json  package.json
sdk/src/: index.ts
specs/: AGENT-OS-INTEGRATION.md  BOUNDARY-DAEMON-INTEGRATION.md  COMMON-INTEGRATION.md  FINITE-INTENT-EXECUTOR-INTEGRATION.md  INTENTLOG-INTEGRATION.md  LEARNING-CONTRACTS-INTEGRATION.md  MEDIATOR-NODE-INTEGRATION.md  MEMORY-VAULT-INTEGRATION.md  README.md  RRA-MODULE-INTEGRATION.md  SYNTH-MIND-INTEGRATION.md  VALUE-LEDGER-INTEGRATION.md
src/: __init__.py  adaptive_cache.py  agent_security.py  anti_harassment.py  api.py  appeals.py  backup.py  block_compression.py  blockchain.py  boundary_daemon.py  boundary_exceptions.py  boundary_modes.py  boundary_protection.py  boundary_rbac_integration.py  boundary_siem.py  chain_interface.py  cli.py  cognitive_load.py  compute_to_data.py  contract_matcher.py  contract_parser.py  data_composability.py  dialectic_consensus.py  dispute.py  dreaming.py  drift_thresholds.py  emergency_overrides.py  encryption.py  entry_quality.py  escalation_fork.py  external_anchoring.py  external_daemon_client.py  fido2_auth.py  gossip_protocol.py  governance_help.py  identity.py  intent_classifier.py  jurisdictional.py  llm_metrics.py  llm_providers.py  (+41 more)
src/api/: __init__.py  anchoring.py  boundary.py  chat.py  composability.py  compute.py  contracts.py  core.py  derivatives.py  endowment.py  help.py  identity.py  (+8 more)
tests/: __init__.py  conftest.py  test_adaptive_cache.py  test_agent_security.py  test_anti_harassment.py  test_api_endpoints.py  test_appeals.py  test_backup.py  test_bad_actors.py  test_block_compression.py  test_blockchain.py  test_boundary_daemon.py  test_boundary_daemon_integration.py  test_boundary_daemon_permutations.py  test_boundary_integration.py  test_boundary_protection.py  test_boundary_rbac_integration.py  test_chain_interface.py  test_cli.py  test_cognitive_load.py  test_contract_matcher.py  test_contract_parser.py  test_dispute.py  test_drift_thresholds.py  test_e2e.py  test_e2e_blockchain_pipelines.py  test_e2e_mediator_integration.py  test_emergency_overrides.py  test_encryption.py  test_entry_quality.py  test_escalation_fork.py  test_exploit_backdoor.py  test_external_integration.py  test_fido2_auth.py  test_fie_asset_directives.py  test_fie_compatibility.py  test_gossip_protocol.py  test_integration.py  test_integration_escalation.py  test_jurisdictional.py  (+34 more)
(+145 files in other folders)
