[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "natlangchain"
version = "0.1.0"
description = "A prose-first, intent-native blockchain protocol using natural language as the primary substrate"
readme = "README.md"
license = "CC-BY-SA-4.0"
requires-python = ">=3.9"
authors = [
    { name = "kase1111-hash" }
]
keywords = [
    "blockchain",
    "natural-language",
    "llm",
    "smart-contracts",
    "intent-matching",
    "proof-of-understanding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

# Core dependencies
dependencies = [
    "flask>=3.0.0",
    "anthropic>=0.34.2",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.20.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pre-commit>=3.0.0",
    # Type checking
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-Flask>=1.1.0",
]

# All optional features
all = [
    "fido2>=1.1.0",  # Hardware security key support
]

[project.scripts]
natlangchain = "api:run_server"

[project.urls]
Homepage = "https://github.com/kase1111-hash/NatLangChain"
Documentation = "https://github.com/kase1111-hash/NatLangChain#readme"
Repository = "https://github.com/kase1111-hash/NatLangChain.git"
Issues = "https://github.com/kase1111-hash/NatLangChain/issues"

# =============================================================================
# Build Configuration
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/tests",
    "/README.md",
    "/SPEC.md",
    "/API.md",
]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (needed for tests)
    "S104",   # Possible binding to all interfaces (intentional for server)
    "S105",   # Possible hardcoded password (false positives)
    "S106",   # Possible hardcoded password (false positives)
    "S311",   # Standard pseudo-random generators (acceptable for non-crypto use)
    "B008",   # Function call in default argument (Flask patterns)
    "B904",   # raise without from (too noisy)
    "SIM108", # Use ternary operator (readability preference)
    # Cosmetic/stylistic rules - can be addressed gradually
    "RUF001", # Ambiguous Unicode in strings (×, –, etc. in docs)
    "RUF002", # Ambiguous Unicode in docstrings
    "RUF003", # Ambiguous Unicode in comments
    "RUF012", # Mutable class attributes without ClassVar (add type hints gradually)
    "SIM102", # Nested if statements (readability preference)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106", "B011", "F401", "F402", "RUF059", "E741", "B015"]
"run_server.py" = ["T201"]
# Conditional imports in try/except blocks - used for optional dependencies
"src/api.py" = ["F401"]
"src/dispute.py" = ["F401"]
"src/validator.py" = ["F401", "E741"]
"src/mediator.py" = ["F401"]
"src/natural_language_contracts.py" = ["F401"]
"src/semantic_diff.py" = ["F401"]
"src/semantic_search.py" = ["E402"]  # Import after try/except for optional dependency
"src/cognitive_load.py" = ["E741"]  # Variable 'l' in list comprehensions
"src/p2p_network.py" = ["F402"]  # Loop variable 'field' shadows dataclass import

[tool.ruff.lint.isort]
known-first-party = ["blockchain", "api", "validator"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Bandit Configuration (Security)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "frontend"]
skips = ["B101"]  # assert_used - needed for tests

# =============================================================================
# Mypy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.11"

# Handle missing imports gracefully
ignore_missing_imports = true

# Enable warnings that help catch bugs
warn_return_any = true           # Enabled: catch untyped returns
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true       # Enabled: keep type: ignore comments clean
strict_equality = true           # Enabled: catch None comparison issues
extra_checks = true              # Enabled: additional checks

# Untyped definitions - enabled for new code, legacy modules exempted below
check_untyped_defs = true        # Enabled: catch bugs in untyped functions
disallow_untyped_defs = false    # Too strict for gradual adoption
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# Error codes - reduced list from original, but still lenient for gradual adoption
# These can be enabled one-by-one as the codebase is typed
disable_error_code = [
    "union-attr",      # Item "None" of "X | None" has no attribute
    "arg-type",        # Argument type mismatches (common in legacy)
    "return-value",    # Return type mismatches
    "assignment",      # Type mismatch in assignments
    "call-overload",   # No overload variant matches (numpy/scipy)
    "no-any-return",   # Returning Any (common in legacy code)
    "index",           # Indexed assignment issues
    "attr-defined",    # Attribute access issues with optional imports
    "var-annotated",   # Missing type annotations
    "dict-item",       # Dict type mismatches
]

# Exclude directories
exclude = [
    "tests",
    "frontend",
    "build",
    "dist",
    "venv",
    "\\.venv",
]

# =============================================================================
# Per-Module Overrides
# =============================================================================

# Tests - ignore all errors
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# New API blueprints - stricter checking for new modular code
[[tool.mypy.overrides]]
module = "api.*"
check_untyped_defs = true
warn_return_any = true
disallow_incomplete_defs = true

# Legacy modules - ignore errors (can be enabled incrementally)
[[tool.mypy.overrides]]
module = [
    "blockchain",
    "validator",
    "semantic_search",
    "semantic_diff",
    "dialectic_consensus",
    "contract_parser",
    "contract_matcher",
    "dispute",
    "mediator",
    "p2p_network",
    "negotiation_engine",
    "mobile_deployment",
    "treasury",
    "encryption",
    "temporal_fixity",
    "semantic_oracles",
    "multi_model_consensus",
    "escalation_fork",
    "observance_burn",
    "anti_harassment",
    "fido2_auth",
    "zk_privacy",
    "market_pricing",
]
ignore_errors = true
