[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "natlangchain"
version = "0.1.0-alpha"
description = "A prose-first, intent-native blockchain protocol using natural language as the primary substrate"
readme = "README.md"
license = "CC-BY-SA-4.0"
requires-python = ">=3.9"
authors = [
    { name = "kase1111-hash" }
]
keywords = [
    "blockchain",
    "natural-language",
    "llm",
    "smart-contracts",
    "intent-matching",
    "proof-of-understanding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

# Core dependencies
dependencies = [
    "flask>=3.0.0",
    "anthropic>=0.34.2",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.20.0",
    "cryptography>=41.0.0",
    "requests>=2.28.0",  # For Ollama/llama.cpp HTTP clients
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pre-commit>=3.0.0",
    # Type checking
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-Flask>=1.1.0",
]

# =============================================================================
# LLM Provider Dependencies (Multi-Provider Consensus)
# =============================================================================
# These address the centralization risk: "Unlike PoW/PoS where anyone can
# participate, LLM validation requires API access" - by supporting 6+ providers
# including local options, any node can participate without cloud dependency.

# OpenAI GPT-4/GPT-4o (cloud) - Breadth specialist
openai = [
    "openai>=1.0.0",
]

# Google Gemini (cloud) - Balanced capabilities
gemini = [
    "google-generativeai>=0.3.0",
]

# xAI Grok (cloud) - Logic specialist (uses OpenAI-compatible API)
grok = [
    "openai>=1.0.0",
]

# All cloud LLM providers
llm-cloud = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

# All LLM providers (cloud + local support via requests)
llm-all = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

# =============================================================================
# Infrastructure Dependencies
# =============================================================================

# Redis support (distributed locking, caching, coordination)
redis = [
    "redis>=4.0.0",
]

# PostgreSQL storage backend
postgres = [
    "psycopg2-binary>=2.9.0",
]

# Production deployment (all scaling features + WSGI server)
production = [
    "redis>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.0.0",
]

# All optional features (including all LLM providers)
all = [
    "redis>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.scripts]
natlangchain = "src.cli:main"

[project.urls]
Homepage = "https://github.com/kase1111-hash/NatLangChain"
Documentation = "https://github.com/kase1111-hash/NatLangChain#readme"
Repository = "https://github.com/kase1111-hash/NatLangChain.git"
Issues = "https://github.com/kase1111-hash/NatLangChain/issues"

# =============================================================================
# Build Configuration
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/tests",
    "/README.md",
    "/SPEC.md",
    "/API.md",
]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (needed for tests)
    "S104",   # Possible binding to all interfaces (intentional for server)
    "S105",   # Possible hardcoded password (false positives)
    "S106",   # Possible hardcoded password (false positives)
    "S110",   # try-except-pass (intentional for optional imports)
    "S112",   # try-except-continue (intentional for batch processing)
    "S311",   # Standard pseudo-random generators (acceptable for non-crypto use)
    "S324",   # MD5 hash (used for non-security purposes: cache keys, TURN auth)
    "S603",   # subprocess call (intentional for CLI tools)
    "S607",   # partial executable path (intentional for CLI tools)
    "S608",   # SQL injection (false positives in parameterized queries)
    "B007",   # Unused loop variable (often intentional for unpacking)
    "B027",   # Empty method in abstract class (intentional optional overrides)
    "B905",   # zip without strict (legacy compatibility)
    "F841",   # Unused variable (sometimes intentional for clarity)
    "B008",   # Function call in default argument (Flask patterns)
    "B904",   # raise without from (too noisy)
    "SIM108", # Use ternary operator (readability preference)
    # Cosmetic/stylistic rules - can be addressed gradually
    "RUF001", # Ambiguous Unicode in strings (×, –, etc. in docs)
    "RUF002", # Ambiguous Unicode in docstrings
    "RUF003", # Ambiguous Unicode in comments
    "RUF005", # Consider concatenation (readability preference)
    "RUF012", # Mutable class attributes without ClassVar (add type hints gradually)
    "RUF013", # Implicit Optional (gradual typing)
    "RUF022", # __all__ should be sorted (not critical)
    "RUF059", # Unused unpacked variables (often intentional)
    "SIM102", # Nested if statements (readability preference)
    "SIM103", # Return condition directly (readability preference)
    "SIM105", # Use contextlib.suppress (readability preference)
    "SIM110", # Use any() (readability preference)
    "SIM112", # Use os.environ.get (readability preference)
    "SIM116", # Use dict instead of if-elif (readability preference)
    "SIM117", # Combine with statements (readability preference)
    "SIM210", # Use bool() (readability preference)
    "C401",   # Unnecessary generator (performance micro-optimization)
    "C416",   # Unnecessary comprehension (style preference)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106", "B011", "F401", "F402", "RUF059", "E741", "B015", "F841", "B007", "B027", "E402"]
"run_server.py" = ["T201"]
# Conditional imports in try/except blocks - used for optional dependencies
"src/__init__.py" = ["F401"]  # Re-exports for package API
"src/api/__init__.py" = ["F401"]
"src/api/*.py" = ["F401", "E402"]  # Optional imports in API modules
"src/blockchain.py" = ["F401"]  # Optional imports for entry quality
"src/validator.py" = ["F401", "E741"]
"src/semantic_search.py" = ["E402"]  # Import after try/except for optional dependency
"src/storage/*.py" = ["F401"]  # Re-exports and conditional imports
"src/monitoring/*.py" = ["F401"]  # Conditional monitoring imports

[tool.ruff.lint.isort]
known-first-party = ["blockchain", "api", "validator"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Bandit Configuration (Security)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "frontend"]
skips = ["B101"]  # assert_used - needed for tests

# =============================================================================
# Mypy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.11"

# Handle missing imports gracefully
ignore_missing_imports = true

# Enable warnings that help catch bugs
warn_return_any = true           # Enabled: catch untyped returns
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true       # Enabled: keep type: ignore comments clean
strict_equality = true           # Enabled: catch None comparison issues
extra_checks = true              # Enabled: additional checks

# Untyped definitions - enabled for new code, legacy modules exempted below
check_untyped_defs = true        # Enabled: catch bugs in untyped functions
disallow_untyped_defs = false    # Too strict for gradual adoption
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# Error codes - reduced list from original, but still lenient for gradual adoption
# These can be enabled one-by-one as the codebase is typed
disable_error_code = [
    "union-attr",      # Item "None" of "X | None" has no attribute
    "arg-type",        # Argument type mismatches (common in legacy)
    "return-value",    # Return type mismatches
    "assignment",      # Type mismatch in assignments
    "call-overload",   # No overload variant matches (numpy/scipy)
    "no-any-return",   # Returning Any (common in legacy code)
    "index",           # Indexed assignment issues
    "attr-defined",    # Attribute access issues with optional imports
    "var-annotated",   # Missing type annotations
    "dict-item",       # Dict type mismatches
]

# Exclude directories
exclude = [
    "tests",
    "frontend",
    "build",
    "dist",
    "venv",
    "\\.venv",
]

# =============================================================================
# Per-Module Overrides
# =============================================================================

# Tests - ignore all errors
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# New API blueprints - stricter checking for new modular code
[[tool.mypy.overrides]]
module = "api.*"
check_untyped_defs = true
warn_return_any = true
disallow_incomplete_defs = true

# Legacy modules - ignore errors (can be enabled incrementally)
[[tool.mypy.overrides]]
module = [
    "blockchain",
    "validator",
    "semantic_search",
    "contract_parser",
    "contract_matcher",
    "encryption",
]
ignore_errors = true
