[package]
name = "natlangchain"
version = "1.0.0"
description = "NatLangChain - Natural Language Blockchain Explorer"
authors = ["NatLangChain Team"]
license = "MIT"
repository = "https://github.com/kase1111-hash/NatLangChain"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
